FIX: Number alignment on categories in hamburger

--- a/app/assets/stylesheets/common/base/menu-panel.scss
+++ b/app/assets/stylesheets/common/base/menu-panel.scss
@@ -66,8 +66,6 @@
     .badge-notification {
       color: dark-light-choose(scale-color($primary, $lightness: 50%), scale-color($secondary, $lightness: 50%));
       background-color: transparent;
-      vertical-align: top;
-      padding: 5px 5px 2px 5px;
       display: inline;
     }
   }
